added my own get hub and netlify urls

--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
       <div>🌤24°C</div>
     </main>
     <footer>
-      This project was codded by
-      <a href="" target="_blank">Mahdia Khamoosh</a> is
-      <a href="" target="_blank">open-sourced on GitHub</a>and<a
-        href=""
+      This project was coded by
+      <a href="https://github.com/Mahdia-123" target="_blank"
+        >Mahdia Khamoosh</a
+      >
+      is
+      <a
+        href="https://github.com/Mahdia-123/vanilla-weather-app"
         target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a href="https://vanillasweatherapp.netlify.app/" target="_blank"
         >hosted on Netlify</a
       >
     </footer>
