--- a/index.html
+++ b/index.html
@@ -4,40 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla weather app</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <head>
-      <form>
-        <input type="text" placeholder="Enter a city.." required />
-        <input type="submit" value="submit" />
-      </form>
-    </head>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
-          <br />
-          Humidity: 66%, Wind: 3.13km/h
-        </p>
-      </div>
-      <div>🌤24°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/Mahdia-123" target="_blank"
-        >Mahdia Khamoosh</a
-      >
-      is
-      <a
-        href="https://github.com/Mahdia-123/vanilla-weather-app"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and
-      <a href="https://vanillasweatherapp.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >
-    </footer>
+    <div class="vanilla-weather-app">
+      <header>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter a city.."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="submit" class="search-form-btn" />
+        </form>
+      </header>
+      <main>
+        <div class="vanilla-weather-app-data">
+          <div>
+            <h1 class="vanilla-weather-app-city">Paris</h1>
+            <p class="vanilla-weather-app-details">
+              Tuesday 14:49, scattered clouds
+              <br />
+              Humidity:<strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            </p>
+          </div>
+          <div class="vanilla-weather-app-temperature-container">
+            <div class="vanilla-weather-app-icon">🌤</div>
+            <div class="vanilla-weather-app-temperature">24</div>
+            <div class="vanilla-weather-app-unit">°C</div>
+          </div>
+        </div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/Mahdia-123" target="_blank"
+          >Mahdia Khamoosh</a
+        >
+        is
+        <a
+          href="https://github.com/Mahdia-123/vanilla-weather-app"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a href="https://vanillasweatherapp.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
