--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <body>
     <div class="vanilla-weather-app">
       <header>
-        <form>
+        <form id="search-form">
           <input
             type="text"
             placeholder="Enter a city.."
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="submit" class="search-form-btn" />
         </form>
@@ -26,7 +27,7 @@
       <main>
         <div class="vanilla-weather-app-data">
           <div>
-            <h1 class="vanilla-weather-app-city">Paris</h1>
+            <h1 class="vanilla-weather-app-city" id="city">Paris</h1>
             <p class="vanilla-weather-app-details">
               Tuesday 14:49, scattered clouds
               <br />
@@ -57,5 +58,6 @@
         >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
