--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla weather app</title>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <title>Vanilla weather app</title>
   </head>
   <body>
     <div class="vanilla-weather-app">
@@ -27,7 +30,7 @@
       <main>
         <div class="vanilla-weather-app-data">
           <div>
-            <h1 class="vanilla-weather-app-city" id="city">Paris</h1>
+            <h1 class="vanilla-weather-app-city" id="city"></h1>
             <p class="vanilla-weather-app-details">
               Tuesday 14:49, scattered clouds
               <br />
@@ -36,7 +39,7 @@
           </div>
           <div class="vanilla-weather-app-temperature-container">
             <div class="vanilla-weather-app-icon">🌤</div>
-            <div class="vanilla-weather-app-temperature">24</div>
+            <div class="vanilla-weather-app-temperature" id="temperature"></div>
             <div class="vanilla-weather-app-unit">°C</div>
           </div>
         </div>
