--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
           <div>
             <h1 class="vanilla-weather-app-city" id="city"></h1>
             <p class="vanilla-weather-app-details">
-              Tuesday 14:49, scattered clouds
+              <span id="time"></span> , <span id="description"></span>
               <br />
-              Humidity:<strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity:<strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="vanilla-weather-app-temperature-container">
