uapdated the css of the icon and added api weather app icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
           </div>
           <div class="vanilla-weather-app-temperature-container">
-            <div class="vanilla-weather-app-icon">🌤</div>
+            <div id="icon"></div>
             <div class="vanilla-weather-app-temperature" id="temperature"></div>
             <div class="vanilla-weather-app-unit">°C</div>
           </div>
