--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="vanilla-weather-app-unit">°C</div>
           </div>
         </div>
+        <div class="vanilla-weather-forecast" id="weather-forecast"></div>
       </main>
       <footer>
         This project was coded by
